# area_calculator

./: pyproject.toml
app/: area_calculator.py  figures.py  test.ipynb  validation.py
